Fix login form alignment

--- a/client/siteace.css
+++ b/client/siteace.css
@@ -7,10 +7,6 @@
 	margin: 7px;
 }
 
-.navbar-right {
-	margin-right: 30px;
-}
-
 ol > li {
 	margin-top: 50px;
 }
